--- a/asseto-asset-management/templates/commons/sidebar.html
+++ b/asseto-asset-management/templates/commons/sidebar.html
@@ -125,6 +125,12 @@
                                 <a href="{% url 'dashboard:product_category_list' %}">Product Categories</a>
                             </li>
                         {% endif %}
+                        {% if perms.authentication.delete_product_category or perms.authentication.add_product_category or perms.authentication.edit_product_category %}
+                            <li class="submenu-item {% if submenu == 'product_category' %}active{% endif %}">
+                                <a href="{% url 'dashboard:product_sub_category_list' %}">Product Sub Catagories</a>
+                            </li>
+                        {% endif %}
+
                         {% if request.user.is_superuser %}
                             <li class="submenu-item {% if submenu == 'roles' %}active{% endif %}">
                                 <a href="{% url 'roles:list' %}">Roles</a>
